# ASR-Meeting-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  diarizer.py  extract_voice.py  pipeline.py  pyproject.toml  requirements.txt  run.py  run.sh  speaker_identifier.py  transcriber.py
docs/: VLLM_SETUP.md  start_vllm.sh
scripts/: setup_linux.sh  setup_mac.sh  setup_windows.bat
src/: __init__.py  app.py  config.py  database.py  diarizer.py  extract_voice.py  pipeline.py  speaker_id.py  transcriber.py  warmup.py
